# Frontier_fork

./: .gitignore
Frontier2D/FRONTIER-gnu/: CMakeLists.txt
Frontier2D/FRONTIER-gnu/MFA/: CMakeLists.txt  Cluster.h  ConstraintTypes.h  DegValues.cpp  Edge.cpp  Edge.h  GlobalState.cpp  GlobalState.h  Graph.h  List.h  ShapePartTypes.h  ShapeTypes.h  Vertex.h
Frontier2D/FRONTIER-gnu/MFA/algo/: DistributeTree.cpp  DistributeTree.h  Distribution.cpp  Distribution.h  Graph.cpp  Graph.h  Groups.cpp  Groups.h  MinimalDense.cpp  MinimalDense.h  mfa5GetC.cpp  mfa6Dist.cpp  mfa8Algo.cpp
Frontier2D/FRONTIER-gnu/MFA/dr_tree/: mfa4Grop.cpp  mfa7DRTree.cpp
Frontier2D/FRONTIER-gnu/MFA/entities/: Cluster.cpp  Cluster.h  DegValues.h  GlobalState.h  Graph.cpp  Graph.h  List.h  Util.cpp  Util.h  Vertex.cpp
Frontier2D/FRONTIER-gnu/MFA/ostream/: mfa3Prnt.cpp
Frontier2D/FRONTIER-gnu/MFA/output/: DRPrintUtils.cpp  DRPrintUtils.h
Frontier2D/FRONTIER-gnu/MFA/solver/: ArrayUtil.cpp  ArrayUtil.h  Bifurcation.cpp  Bifurcation.h  ConstraintValidation.cpp  ConstraintValidation.h  EquationGenerator.cpp  EquationGenerator.h  GraphUpdate.cpp  GraphUpdate.h  IntersectionFinder.cpp  IntersectionFinder.h  PrintUtil.cpp  PrintUtil.h  Solver.cpp  Solver.h  SolverUtil.cpp  SolverUtil.h  StringUtil.cpp  StringUtil.h  Testing.cpp  Testing.h  constants.h
Frontier2D/FRONTIER-gnu/MFA/tst/: CMakeLists.txt  ClusterTests.cpp  DegValuesTests.cpp  EdgeTests.cpp  GraphTests.cpp  ListTests.cpp  VertexTests.cpp
Frontier2D/FRONTIER-gnu/MFA/tst/entities/: CMakeLists.txt  ClusterTests.cpp  DegValuesTests.cpp  EdgeTests.cpp  GraphTests.cpp  ListTests.cpp  VertexTests.cpp
Frontier2D/FRONTIER-gnu/MFA/tst/solver/: CMakeLists.txt  SolverTests.cpp  StringUtilTests.cpp
Frontier2D/FRONTIER-gnu/Sketcher/: .gitignore  pom.xml  sketcher.prf
Frontier2D/FRONTIER-gnu/Sketcher/src/: SKMainFrame.java
Frontier2D/FRONTIER-gnu/Sketcher/src/com/frontier/sketcher/: AppMain.java  SKBaseConstraint.java  SKBifurFrame.java  SKImageShape1.java  SKMainFrame.java  SKRepository.java  SKSimpleSolver.java  (+2 more)
Frontier2D/FRONTIER-gnu/UTU/: CMakeLists.txt  UTU.cpp  UTU.h
Frontier2D/FRONTIER-gnu/documentation/Sketcher/sketcherdocs/: SKImageShape.html
(+186 files in other folders)
